recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:13: error: reassignment to val
	z = newZ;
          ^DragonCurve1:14: error: reassignment to val
	t = newT;
          ^