recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
	if(order == 0){
		return;
	}
	var u = (x + z)/2 + (t - y)/2;
	var v = (y + t)/2 - (z - x)/2;
	setPos(x, y);
	var newZ = 0;
	var newT = 0;



	z = newZ;
	t = newT;
	allerVers(z, t);
}
